# GAUFS

./: .gitignore  NOTICE.txt  README.md  alg_clustering.py  build_test_genetic_2.py  data.csv  environment.yml  genetic2.py  genetic2_parallel.py  main.py  pyproject.toml  requirements.txt  temp_analysis_weighted_variables_num_cluster.py  testBuildTests.py  to_do.txt
.github/workflows/: publish.yml  tests-build.yml  tests.yml
comparison/: automate_v2.py  datasets_mat.ipynb
comparison/AutoUFSTool-main/: main_comparison.m
docs/source/: conf.py  index.rst  modules.rst
docs/source/api/: gaufs.DataGenerator.rst  gaufs.Gaufs.rst  gaufs.clustering_experiments.HierarchicalExperiment.rst  gaufs.clustering_experiments.base.rst  (+22 more)
examples/: demo2.py
experiments/: build_test_genetic_2.py  synthetic_data_generator.py  test_build_tests.py  utils.py
experiments/datasets/: iris.csv
src/: analysis_weighted_variables_num_cluster.py  build_test_genetic_2.py  clustering_algorithms.py  evaluation_metric.py  gaufs.py  genetic2_parallel.py  genetic_search.py  read_compare_vanilla.py  utils.py  utils_genetic2.py
src/gaufs/: __init__.py  data_generator.py  gaufs.py  genetic_search.py  utils.py
src/unsupervised_genetic_selector/: alg_clustering.py  analysis_of_genetic_search.py  genetic_search.py  genetic_search_parallel.py  genetic_search_results_analyzer.py  unsupervised_selector.py  utils_genetic.py
srcOld/: analysis_weighted_variables_num_cluster.py  data_generators.py  delete_me.py  genetic2_parallel.py  utils_genetic2.py
tests/: test_main.py
tests/demo/: main.py
(+103 files in other folders)
